<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WorkSchedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Main</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Work Schedule</string>

    <string name="user_surname_label">Surname</string>
    <string name="user_name_label">Name</string>
    <string name="user_patronymic">Patronymic</string>
    <string name="menu_driver_edit">Driver</string>
    <string name="menu_schedule_all_drivers">Schedule all drivers</string>
    <string name="menu_route_edit">Create route</string>
    <string name="menu_edit_set">Set</string>

    <string name="edit_driver_routes_admittance">Routes admittance:</string>
    <string name="add_new_driver">Add new driver</string>

    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>

    <string name="edit_route_departure_time">Departure time</string>
    <string name="edit_route_train_number">Train number</string>
    <string name="edit_route_driver">Driver</string>
    <string name="edit_route_periodicity">Periodicity</string>
    <string name="edit_route_time_to">Travel time</string>
    <string name="edit_route_rest_time">Rest</string>
    <string name="edit_route_time_from">Time from</string>
    <string name="date">Date</string>
    <string name="train_number_example">number</string>
    <string name="add_new_route">Add new route</string>

    <string name="edit_train_number">Train number</string>
    <string name="edit_train_direction">Direction</string>
    <string name="add_new_train">Add new train</string>

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_shift_schedule">Shift schedule</string>
    <string name="drivers">Drivers</string>
    <string name="menu_direction">Directions</string>
    <string name="temporary_datetime">Datetime</string>
    <string name="menu_train_edit">Create Train</string>
    <string name="id">Id</string>
    <string name="action_fill_db_for_demonstration">Fill DB for demonstration</string>
    <string name="action_clear_db">Clear DB</string>
    <string name="action_clear_train_run">Clear All</string>


    <!--    Fragments   -->
    <string name="driverEditDataInputIncorrect">Enter correct data</string>
    <string name="driverEditDataInputSuccess">Driver added successfully</string>
    <string name="mainTableFilled">Routes table has been filled with drivers data</string>
    <string name="trainEditTrainAdded">Direction added successfully</string>

    <!--    Main Activity   -->
    <string name="dataAdded">Data added successfully</string>
    <string name="dataDeleted">Data deleted successfully</string>

    <string name="periodicity_daily">Daily</string>
    <string name="periodicity_on_even">On Even</string>
    <string name="periodicity_on_odd">On odd</string>
    <string name="periodicity_single">Single</string>
    <string name="edit_route_train_direction">Train direction</string>
    <string name="edit_periodicity_default_item">Automatically</string>
    <string name="redact">redact</string>
    <string name="count_night_radio_button1" translatable="false">0</string>
    <string name="count_night_radio_button2" translatable="false">1</string>
    <string name="count_night_radio_button3" translatable="false">2</string>
    <string name="title_radio_button_count_night">nights in a row</string>
    <string name="work_time">worked time</string>
    <string name="notes">Notes</string>
    <string name="add_weekends">Add weekends</string>
    <string name="weekends">Weekends</string>

    <!--    Settings Fragment-->
    <string name="planning_horizon">Planning horizon, days</string>
    <string name="settings">Settings</string>
    <string name="default_horizon_planing">5</string>
    <string name="min_rest">min rest, hours</string>
    <string name="min_rest_value">16</string>
    <string name="no_data">no data</string>
    <string name="start_time">Start time: </string>
    <string name="train_selection">Train: </string>
    <string name="add_weekend">add week</string>
    <string name="sick_leave">sick leave</string>
    <string name="rest">rest time:</string>

    <!--    Weekend Fragment-->
    <string name="ready_to_work">ready to work</string>
    <string name="with">with:</string>
</resources>
