<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_route_edit"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_route_edit" />
        <item
            android:id="@+id/nav_route_datetime_edit"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/temporary_datetime" />
        <item
            android:id="@+id/nav_trains"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_trains" />
        <item
            android:id="@+id/drivers_list"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/drivers" />
    </group>
</menu>
