<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.workschedule.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_trains"
        android:name="com.example.workschedule.ui.trains.TrainsFragment"
        android:label="@string/menu_trains"
        tools:layout="@layout/fragment_trains" />

    <fragment
        android:id="@+id/nav_drivers"
        android:name="com.example.workschedule.ui.drivers.DriversFragment"
        android:label="@string/drivers"
        tools:layout="@layout/fragment_drivers" />

    <fragment
        android:id="@+id/nav_train_edit"
        android:name="com.example.workschedule.ui.train_edit.TrainEditFragment"
        android:label="@string/menu_train_edit"
        tools:layout="@layout/fragment_train_edit" />

    <fragment
        android:id="@+id/nav_driver_edit"
        android:name="com.example.workschedule.ui.driver_edit.DriverEditFragment"
        android:label="@string/menu_driver_edit"
        tools:layout="@layout/fragment_driver_edit" />

    <fragment
        android:id="@+id/nav_route_edit"
        android:name="com.example.workschedule.ui.route_edit.RouteEditFragment"
        android:label="@string/menu_route_edit"
        tools:layout="@layout/fragment_route_edit" />

    <fragment
        android:id="@+id/nav_route_datetime_edit"
        android:name="com.example.workschedule.ui.route_edit.DateTimePickerFragment"
        android:label="@string/menu_route_edit"
        tools:layout="@layout/fragment_route_datetime_edit" />

    <fragment
        android:id="@+id/schedule_all_drivers"
        android:name="com.example.workschedule.ui.schedule_all_drivers.SchedulersFragment"
        android:label="@string/menu_driver_edit"
        tools:layout="@layout/fragment_schedule_all_drivers" />

</navigation>