<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trainEditFragmentTrainNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_train_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trainEditFragmentTrainNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trainEditFragmentDirectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_train_direction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trainEditFragmentTrainNumberLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trainEditFragmentSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/trainEditFragmentGuideline"
        android:text="@string/save_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trainEditFragmentCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/trainEditFragmentGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel_button"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/trainEditFragmentGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>
