<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentDateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_disembark_time"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_date_and_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTrainNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_train"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_arrow_drop_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentDateTimeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentTrainNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentDriverLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_driver"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_arrow_drop_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentTrainNumberLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentPeriodicityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_periodicity"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_arrow_drop_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentDriverLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentPeriodicity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTimeToLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_time_to"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentPeriodicityLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentTimeTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTimeRestLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_rest_time"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentTimeToLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentTimeRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTimeFromLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_time_from"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentTimeRestLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentTimeFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/routeEditFragmentSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/routeEditFragmentGuidelineLeft"
        android:text="@string/save_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/routeEditFragmentCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/routeEditFragmentGuidelineRight"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel_button"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/routeEditFragmentGuidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.45"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/routeEditFragmentGuidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>
